Decrease brightness and constrast of featured images so text is always readable; fixes #25.

--- a/assets/stylesheets/variables/_mixins.scss
+++ b/assets/stylesheets/variables/_mixins.scss
@@ -12,5 +12,5 @@
 }
 
 @mixin desaturate() {
-	filter: grayscale(100%) brightness(0.6) contrast(2);
+	filter: grayscale(100%) brightness(0.3) contrast(1.25);
 }
